# best-commits

./: .gitignore  CLAUDE.md  MIGRATION.md  Makefile  PROMPT_IMPROVEMENTS.md  README.md  asd.py  commit-changes.py  pyproject.toml  review-changes.py
docs/: .gitignore  README.md  astro.config.mjs  package.json  sync-docs.mjs
docs/src/: content.config.ts
docs/src/content/docs/: .gitkeep  configuration.md  installation.md  troubleshooting.md
docs/src/content/docs/development/: architecture.md  contributing.md
docs/src/content/docs/reference/: api-providers.md  environment.md  faq.md
docs/src/content/docs/tools/: commit.md  index.md  review.md
docs/src/styles/: custom.css
evals/: .gitignore  MIGRATION.md  README.md  __init__.py  conftest.py  pyproject.toml
evals/commit_changes/: README.md  __init__.py  run_eval.py  test_commit_eval.py
evals/commit_changes/basic_feature/: README.md  diff.txt  expected_elements.json
evals/commit_changes/bugfix/: README.md  diff.txt  expected_elements.json
evals/commit_changes/refactor/: README.md  diff.txt  expected_elements.json
evals/review_changes/: README.md  __init__.py  run_eval.py  test_review_eval.py
evals/review_changes/breaking_change/: README.md  diff.txt  expected_elements.json
evals/review_changes/code_quality/: README.md  diff.txt  expected_elements.json
evals/review_changes/security_issue/: README.md  diff.txt  expected_elements.json
evals/storage/: README.md  __init__.py  database.py  results.db  schema.sql
scripts/: install-tool.sh
specs/: 01-review-functionality.md
tools/: __init__.py
tools/commit_changes/: README.md  __init__.py  __main__.py  main.py  pyproject.toml
tools/commit_changes/commit_changes/: PROMPT.md  __main__.py
tools/review_changes/: PROMPT.md  README.md  __main__.py  main.py  pyproject.toml
tools/review_changes/review_changes/: SCORING_SYSTEM.md  __init__.py  __main__.py
