[project]
name = "best-commits-evals"
version = "0.1.0"
description = "Evaluation suite for best-commits AI tools using deepeval"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "best-commits contributors" }
]

dependencies = [
    "deepeval>=1.0.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "pytest-html>=3.0.0",
    "pytest-json-report>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/rikurb8/best-commits"
Repository = "https://github.com/rikurb8/best-commits"
Issues = "https://github.com/rikurb8/best-commits/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["storage"]

[tool.pytest.ini_options]
testpaths = ["commit_changes", "review_changes"]
python_files = ["test_*.py"]
markers = [
    "commit: tests for commit message generation",
    "review: tests for code review generation",
]
